--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@next/mdx": "^13.3.4",
     "gray-matter": "^4.0.3",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
+    "rehype-katex": "^6.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "sass": "^1.59.2"
   },
   "scripts": {
