--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
-    "@next/mdx": "^13.3.4",
+    "acorn-jsx": "5.0.1",
     "gray-matter": "^4.0.3",
     "next": "^13.2.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "rehype-katex": "^6.0.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "remark-toc": "^8.0.1",
     "sass": "^1.59.2"
   },
   "scripts": {
