--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    // map ~/* to ./src/* in linting
+    // to match webpack settings
+    "paths": {
+      "~/*": ["./*"]
+    },
     "target": "ESNext",
     "lib": [
       "dom",
