--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^13.2.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "rehype-external-links": "^2.0.1",
