--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/bebas-neue": "^4.5.9",
     "@fontsource/open-sans": "^4.5.14",
+    "@math.gl/core": "^3.6.3",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.11",
