--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "devicon": "^2.15.1",
     "gray-matter": "^4.0.3",
     "memoize-one": "^6.0.0",
     "next": "^13.2.4",
