--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass": "^1.59.2"
   },
   "scripts": {
+    "gen": "tsx src/codegen/index-content.ts",
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
@@ -39,6 +40,8 @@
   "devDependencies": {
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
+    "argparse": "^2.0.1",
+    "tsx": "^4.9.3",
     "typescript": "4.9.5"
   }
 }
